Create user API (login, register)

--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
+API_PORT=3001
+SALT_WORK_FACTOR=10
+JWT_SECRET=developmentjsonwebtokensecret
 DB_USER=cinema-app-user
 DB_PASS=cinema-app-user-password
