--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.6",
+    "cors": "^2.8.5",
+    "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.7.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
