--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     ]
   },
   "devDependencies": {
+    "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "express-pino-logger": "^4.0.0",
